# uuid-persistent

./: LICENSE  README.md  uuid-persistent.cabal
src/Data/UUID/Persist/: Instances.hs
