name:                uuid-persistent
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -Wno-orphans
  default-language:    Haskell2010
  build-depends:       base >=4.12.0 && <4.13
                     , persistent >=2.9.2 && <2.10
                     , text >=1.2.3 && <1.3
                     , uuid-path-pieces >=0.0.0 && <0.1
                     , uuid-types >=1.0.3 && <1.1
  exposed-modules:     Data.UUID.Persist.Instances
